objects/EUR_CRM_Store_Audit__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>Store_Audits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EUR_CRM_Audit_Datetime__c</fullName>
        <label>Audit Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Audit_Summary__c</fullName>
        <label>Audit Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Cocktail_Menu_Check_Notes__c</fullName>
        <label>Cocktail Menu Check Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Cocktail_Menu_Compliant__c</fullName>
        <label>Cocktail Menu Compliant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Latest_Store_Audit_Formula__c</fullName>
        <formula>IF(EUR_CRM_Account__r.EUR_CRM_Last_Store_Audit_Date_RollUp__c  =  CreatedDate , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Latest Store Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_User_Has_Clicked_Check_All__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a check box to indicate whether the User has pressed the &quot;Check All&quot; button on the mobile app to indicate that all Store Audit Items have been checked for a Store Audit. (Newly created for PR CH)</description>
        <label>User has clicked &quot;Check All&quot;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>EUR_CRM_Visit__c</referenceTo>
        <relationshipName>Store_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Store_Check_Datetime__c</fullName>
        <label>Store Check Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Store_Check_Summary__c</fullName>
        <label>Store Check Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Store_Check_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store Check Visit</label>
        <referenceTo>EUR_CRM_JB_Store_Check_Visit__c</referenceTo>
        <relationshipName>Store_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Store Audit (EU)</label>
    <listViews>
        <fullName>EUR_AO_Store_Audits1</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Audit_Datetime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Store_Audit__c.EUR_AO_Off_Trade_Store_Audit,EUR_CRM_Store_Audit__c.EUR_AO_On_Trade_Store_Audit</value>
        </filters>
        <label>EUR AO Store Audits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_AT_All_Store_Audits</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Audit_Datetime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Store_Audit__c.EUR_AT_Store_Audit</value>
        </filters>
        <label>EUR AT All Store Audits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_All_DK_Store_Audits</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Audit_Datetime__c</columns>
        <columns>EUR_CRM_Audit_Summary__c</columns>
        <columns>EUR_CRM_Visit__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Store_Audit__c.EUR_DK_ON_Trade_Store_Audit,EUR_CRM_Store_Audit__c.EUR_DK_OFF_Trade_Store_Audit</value>
        </filters>
        <label>All DK Store Audits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CH_All_Store_Audits</fullName>
        <columns>EUR_CRM_Visit__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Audit_Datetime__c</columns>
        <columns>EUR_CRM_Audit_Summary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Store_Audit__c.EUR_CH_On_Trade_Store_Audit</value>
        </filters>
        <label>EUR CH All Store Audits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BE_Store_Audit_View</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Audit_Datetime__c</columns>
        <columns>EUR_CRM_Audit_Summary__c</columns>
        <columns>EUR_CRM_Visit__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Store_Audit__c.EUR_BE_On_Trade_Store_Audit,EUR_CRM_Store_Audit__c.EUR_BE_Off_Trade_Store_Audit</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Store_Audit__c.EUR_BE_Wholesaler_Store_Audit</value>
        </filters>
        <label>EUR BE Store Audit View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BG_Store_Audit_View</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Audit_Datetime__c</columns>
        <columns>EUR_CRM_Audit_Summary__c</columns>
        <columns>EUR_CRM_Visit__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Store_Audit__c.EUR_BG_On_Trade_Store_Audit,EUR_CRM_Store_Audit__c.EUR_BG_Off_Trade_Store_Audit</value>
        </filters>
        <label>EUR BG Store Audit View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_PT_Store_Audit_View</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Audit_Datetime__c</columns>
        <columns>EUR_CRM_Audit_Summary__c</columns>
        <columns>EUR_CRM_Visit__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Store_Audit__c.EUR_PT_Off_Trade_Store_Audit,EUR_CRM_Store_Audit__c.EUR_PT_On_Trade_Store_Audit</value>
        </filters>
        <label>EUR PT Store Audit View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_KE_Store_Audits</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Audit_Datetime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Store_Audit__c.EUR_KE_Off_Trade_Store_Audit,EUR_CRM_Store_Audit__c.EUR_KE_On_Trade_Store_Audit</value>
        </filters>
        <label>EUR KE Store Audits</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_MA_All_Store_Audits</fullName>
        <columns>EUR_CRM_Visit__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Audit_Datetime__c</columns>
        <columns>EUR_CRM_Audit_Summary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Store_Audit__c.EUR_MA_Off_Trade_Store_Audit,EUR_CRM_Store_Audit__c.EUR_MA_On_Trade_Store_Audit</value>
        </filters>
        <label>EUR MA All Store Audits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_MA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_RU_All_Store_Audits</fullName>
        <columns>EUR_CRM_Visit__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Audit_Datetime__c</columns>
        <columns>EUR_CRM_Audit_Summary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Store_Audit__c.EUR_RU_Off_Trade_Store_Audit,EUR_CRM_Store_Audit__c.EUR_RU_On_Trade_Store_Audit</value>
        </filters>
        <label>EUR RU All Store Audits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_UK_All_Store_Audits</fullName>
        <columns>EUR_CRM_Visit__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Audit_Datetime__c</columns>
        <columns>EUR_CRM_Audit_Summary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Store_Audit__c.EUR_GB_Store_Audit</value>
        </filters>
        <label>EUR UK All Store Audits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_GB</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_All_Store_Audits</fullName>
        <columns>EUR_CRM_Visit__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Audit_Datetime__c</columns>
        <columns>EUR_CRM_Audit_Summary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Store_Audit__c.EUR_ZA_Off_Trade_Store_Audit,EUR_CRM_Store_Audit__c.EUR_ZA_On_Trade_Store_Audit</value>
        </filters>
        <label>EUR ZA All Store Audits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>STA-{00000000}</displayFormat>
        <label>Store Audit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Audit (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Off_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR AO Off Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AO_On_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR AO On Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Store_Audit</fullName>
        <active>true</active>
        <label>AT Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_Off_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR BE Off Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_On_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR BE On Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_Wholesaler_Store_Audit</fullName>
        <active>true</active>
        <label>EUR BE Wholesaler Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Off_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR BG Off Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_On_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR BG On Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_On_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR CH On Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Off_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>DE Off Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_On_Trade_Store_Audit</fullName>
        <active>true</active>
        <description>DE On Trade Store Audit</description>
        <label>DE On Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Wholesaler_Store_Audit</fullName>
        <active>true</active>
        <label>DE Wholesaler Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_OFF_Trade_Store_Audit</fullName>
        <active>true</active>
        <description>Record Type for DK OFF Trade Store Audit</description>
        <label>EUR DK OFF Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_ON_Trade_Store_Audit</fullName>
        <active>true</active>
        <description>Record Type for ON Trade Store Audit</description>
        <label>EUR DK ON Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_On_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR FI On Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Store_Audit</fullName>
        <active>true</active>
        <label>GB Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Off_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR KE Off Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_On_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR KE On Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Off_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR MA Off Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_On_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR MA On Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Off_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR NG Off Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_On_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR NG On Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Off_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR PT Off Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_On_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR PT On Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Off_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR RU Off Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_On_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR RU On Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Off_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR ZA Off Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_On_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>EUR ZA On Trade Store Audit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>